src/test/ui/issues/issue-39211.stderr
error[E0220]: associated type `Row` not found for `M`
  --> $DIR/issue-39211.rs:21:17
   |
LL |     let a = [3; M::Row::DIM]; //~ ERROR associated type `Row` not found for `M`
   |                 ^^^^^^^^^^^ associated type `Row` not found

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
